# adventOfCode

./: .clangd  .gitignore  CMAKE_AND_SCNLIB_SUMMARY.md  CMAKE_SETUP.md  CMakeLists.txt  QUICKSTART_CMAKE.md  README.md  SCNLIB_V2_REFERENCE.md  cmake_build.sh  run.sh  template.sh  test
2019/Day 1/: Program.java  Program1.java
2019/Day 2/: program1.py
2019/Day 4/: program.py  program1.py
2019/Day 6/: part1.py
2019/Day 8/: part2.py
2021/Day 1/: answer  answer.py
2021/Day 2/: answer.py
2022/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt
2023/Day 1/: solution.cpp  solution_2.cpp
2023/Day 10/: solution.cpp  todo_solution_2.cpp
2023/Day 11/: solution.cpp  solution_2.cpp
2023/Day 12/: solution.cpp  solution_2.cpp  todo_solution_2.cpp
2023/Day 13/: solution.cpp  todo_solution_2.cpp
2023/Day 14/: solution.cpp  todo_solution_2.cpp
2023/Day 2/: solution.cpp  solution_2.cpp
2023/Day 23/: solution.cpp
2023/Day 3/: solution.cpp  solution_2.cpp
2023/Day 4/: solution.cpp  solution_2.cpp
2023/Day 5/: solution.cpp  solution_2.cpp
2023/Day 6/: solution.cpp  solution_2.cpp
2023/Day 7/: solution.cpp  solution_2.cpp
2023/Day 8/: solution.cpp  solution_2.cpp
2023/Day 9/: solution.cpp  solution_2.cpp
2024/: CMakeLists.txt
2024/Day 1/: solution.cpp  solution_1.cpp  solution_2.cpp
2024/Day 10/: solution.cpp  solution_1.cpp  solution_2.cpp
2024/Day 11/: solution.cpp  solution_1.cpp  solution_2.cpp
2024/Day 12/: solution.cpp  solution_1.cpp  solution_2.cpp
2024/Day 13/: solution.cpp  solution_2.cpp
2024/Day 14/: solution.cpp  solution_2.cpp
2024/Day 15/: solution.cpp  solution_2.cpp
2024/Day 16/: solution.cpp  solution_1.cpp  solution_2.cpp
2024/Day 17/: solution.cpp  solution_2.cpp
2024/Day 18/: solution.cpp  solution_2.cpp
2024/Day 19/: solution.cpp  solution_2.cpp
2024/Day 2/: solution.cpp  solution_2.cpp
2024/Day 20/: solution.cpp  solution_2.cpp
2024/Day 21/: solution.cpp  solution_1.cpp
2024/Day 22/: solution.cpp  solution_2.cpp
2024/Day 23/: solution.cpp  solution_2.cpp
2024/Day 24/: solution.cpp  solution_2.cpp
2024/Day 25/: solution.cpp
2024/Day 3/: solution.cpp  solution_2.cpp
2024/Day 4/: solution.cpp  solution_2.cpp
2024/Day 5/: solution.cpp  solution_2.cpp
2024/Day 6/: solution.cpp  solution_1.cpp  solution_2.cpp
2024/Day 7/: solution.cpp  solution_1.cpp  solution_2.cpp
2024/Day 8/: solution.cpp  solution_1.cpp  solution_2.cpp
2024/Day 9/: solution_1.cpp  solution_2.cpp  user_defined.cpp
Day 1/: input1.txt
Day 3/: program.py
Day 8/: part1.py
include/: stone.cpp  stone.h  ud_matrix.h  ud_unordered_map.h  user_defined.h
